--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+CoppeliaSim_Edu_*/
+venv*/
+__pycache__/
+.DS_Store
+# Local noise / logs
+nohup.out
+pip.log
+
+# Big/generated
+rlbench_data/
+renders/
+runtime_logs/
+sac_logs/
+checkpoints/
+
+# Binaries / tools
+CoppeliaSim_Edu_*/
+venv*/
+__pycache__/
+.DS_Store
